--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="slider">
 					   <div class="callbacks_container">
 						   <ul class="rslides" id="slider">
-								<li><h1>EXQUISITE DESIGNER JEWELLERY</h1></li>	
-								<li><h1>EXCLUSIVE QUALITY</h1></li>
-								<li><h1>LATEST DESIGNS WITH BEST PRICES</h1></li>
+								<li><h1>WE HAVE EXQUISITE DESIGNER JEWELLERY</h1></li>	
+								<li><h1>WE HAVE EXCLUSIVE QUALITY</h1></li>
+								<li><h1>WE HAVE LATEST DESIGNS WITH BEST PRICES</h1></li>
 						  </ul>
 						  <p>With Our Jewellery You Discover Your Natural Beauty</p>
 						  <a class="morebtn" href="#">MORE</a>
