--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a href="typography.html">10 GRAMS</a></li>												
 							  </ul>
 						  </li>
-						 <li class="dropdown1"><a href="gallery.html">GALLERY</a>
+						 <li class="dropdown1"><a href="gallery.html">NECKLACE</a>
 							 <ul class="dropdown2">
-										<li><a href="gallery.html">GALLERY 1</a></li>
-										<li><a href="gallery.html">GALLERY 2</a></li>
-										<li><a href="gallery.html">GALLERY 3</a></li>
+										<li><a href="gallery.html">NECKLACE 1</a></li>
+										<li><a href="gallery.html">NECKLACE 2</a></li>
+										<li><a href="gallery.html">NECKLACE 3</a></li>
 							  </ul>
 						 </li>               
 						 <li><a class="scroll" href="#contact">CONTACT</a></li>
